/**
 * @file SkillTooltip.integration.test.tsx
 *
 * Integration test for the SkillTooltip component with scribing detection
 * Tests the actual scribing detection logic with real fight data
 * for Shattering Knife skill from Player 1 in fight 11 of report m2Y9FqdpMjcaZh4R
 */

import React from 'react';
import { render } from '@testing-library/react';
import { ThemeProvider, createTheme } from '@mui/material/styles';
import { Provider } from 'react-redux';
import { configureStore } from '@reduxjs/toolkit';

import { SkillTooltip } from './SkillTooltip';
import type { SkillTooltipProps } from './SkillTooltip';

// Only mock what's absolutely necessary - the logger to avoid context issues
jest.mock('../hooks/useLogger', () => ({
  useLogger: () => ({
    warn: jest.fn(),
    info: jest.fn(),
    error: jest.fn(),
    debug: jest.fn(),
  }),
}));

// Mock Redux store with minimal state
const mockStore = configureStore({
  reducer: {
    // Add minimal reducers as needed
    ui: (state = {}) => state,
  },
  middleware: (getDefaultMiddleware) =>
    getDefaultMiddleware({
      serializableCheck: false,
    }),
});

// Mock theme
const mockTheme = createTheme({
  palette: {
    mode: 'light',
  },
});

// Wrapper component for providers
const TestWrapper: React.FC<{ children: React.ReactNode }> = ({ children }) => (
  <Provider store={mockStore}>
    <ThemeProvider theme={mockTheme}>{children}</ThemeProvider>
  </Provider>
);

describe('SkillTooltip Integration Tests', () => {
  describe('Shattering Knife - Real Scribing Detection', () => {
    // Real Shattering Knife data based on ESO Logs
    const shatteringKnifeProps: SkillTooltipProps = {
      abilityId: 217340,
      name: 'Shattering Knife',
      description:
        'Launch a magical blade that pierces through enemies, dealing Magic Damage. When the blade hits an enemy, it applies a debuff that reduces their Physical and Spell Resistance.',
      headerBadge: 'Ultimate',
      lineText: 'Scribing - Affix',
      iconSlug: 'ability_scribing_affix_001',
      stats: [
        { label: 'Cost', value: '175 Ultimate', color: 'warning' },
        { label: 'Range', value: '28 meters', color: 'info' },
        { label: 'Target', value: 'Enemy', color: 'primary' },
        { label: 'Area', value: 'Line', color: 'secondary' },
      ],
      // Use real fight data - this should trigger actual scribing detection
      fightId: 'm2Y9FqdpMjcaZh4R-11',
      playerId: 1,
    };

    it('should render Shattering Knife with real scribing detection', () => {
      // This tests the actual integration - no mocking of scribing detection
      const { container } = render(
        <TestWrapper>
          <SkillTooltip {...shatteringKnifeProps} />
        </TestWrapper>,
      );

      // The snapshot will capture whatever the real scribing detection returns
      expect(container).toMatchSnapshot();
    });

    it('should render Shattering Knife without fight context', () => {
      const propsWithoutFight = {
        ...shatteringKnifeProps,
        fightId: undefined,
        playerId: undefined,
      };

      const { container } = render(
        <TestWrapper>
          <SkillTooltip {...propsWithoutFight} />
        </TestWrapper>,
      );

      expect(container).toMatchSnapshot();
    });

    it('should render Shattering Knife with different fight context', () => {
      const propsWithDifferentFight = {
        ...shatteringKnifeProps,
        fightId: 'm2Y9FqdpMjcaZh4R-88', // Different fight
        playerId: 2, // Different player
      };

      const { container } = render(
        <TestWrapper>
          <SkillTooltip {...propsWithDifferentFight} />
        </TestWrapper>,
      );

      expect(container).toMatchSnapshot();
    });

    // Test with a known scribing ability that's more likely to be in the data
    it('should render scribing ability with detected data', () => {
      const scribingAbilityProps: SkillTooltipProps = {
        abilityId: 183006, // Cephaliarch's Flail - this was in the abilities data
        name: "Cephaliarch's Flail",
        description: 'A magical tentacle attack that deals damage and applies effects.',
        headerBadge: 'Active',
        lineText: 'Scribing - Focus',
        iconSlug: 'ability_arcanist_003_a',
        fightId: 'm2Y9FqdpMjcaZh4R-11',
        playerId: 4, // This player was using this ability according to the data
      };

      const { container } = render(
        <TestWrapper>
          <SkillTooltip {...scribingAbilityProps} />
        </TestWrapper>,
      );

      expect(container).toMatchSnapshot();
    });
  });

  describe('Edge Cases', () => {
    it('should handle minimal props gracefully', () => {
      const minimalProps: SkillTooltipProps = {
        abilityId: 217340,
        name: 'Shattering Knife',
        description: 'A magical blade attack.',
      };

      const { container } = render(
        <TestWrapper>
          <SkillTooltip {...minimalProps} />
        </TestWrapper>,
      );

      expect(container).toMatchSnapshot();
    });

    it('should handle non-scribing ability', () => {
      // Test with a regular (non-scribing) ability
      const regularAbilityProps: SkillTooltipProps = {
        abilityId: 21970, // Bash - regular ability from the data
        name: 'Bash',
        description: 'Strike an enemy with your weapon, dealing damage and interrupting.',
        headerBadge: 'Active',
        lineText: 'Weapon Skills',
        iconSlug: 'ability_warrior_031',
        fightId: 'm2Y9FqdpMjcaZh4R-11',
        playerId: 1,
      };

      const { container } = render(
        <TestWrapper>
          <SkillTooltip {...regularAbilityProps} />
        </TestWrapper>,
      );

      expect(container).toMatchSnapshot();
    });

    it('should handle JSX description', () => {
      const jsxDescriptionProps: SkillTooltipProps = {
        abilityId: 217340,
        name: 'Shattering Knife',
        description: (
          <span>
            Launch a <strong>magical blade</strong> that pierces through enemies, dealing{' '}
            <em>Magic Damage</em>.
          </span>
        ),
      };

      const { container } = render(
        <TestWrapper>
          <SkillTooltip {...jsxDescriptionProps} />
        </TestWrapper>,
      );

      expect(container).toMatchSnapshot();
    });
  });
});
